--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -27,13 +27,13 @@
     }
 
     .dark {
-        --background: 20 14.3% 4.1%;
+        --background: 40, 100%, 10%;
         --foreground: 60 9.1% 97.8%;
         --card: 20 14.3% 4.1%;
         --card-foreground: 60 9.1% 97.8%;
         --popover: 20 14.3% 4.1%;
         --popover-foreground: 60 9.1% 97.8%;
-        --primary: 24.6 95% 53.1%;
+        --primary: 20, 89%, 50%;
         --primary-foreground: 60 9.1% 97.8%;
         --secondary: 12 6.5% 15.1%;
         --secondary-foreground: 60 9.1% 97.8%;
@@ -44,7 +44,7 @@
         --destructive: 0 72.2% 50.6%;
         --destructive-foreground: 60 9.1% 97.8%;
         --border: 12 6.5% 15.1%;
-        --input: 12 6.5% 15.1%;
+        --input: 20 14.3% 4.1%;
         --ring: 20.5 90.2% 48.2%;
     }
 }
