--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -12,8 +12,8 @@
         --popover-foreground: 20 14.3% 4.1%;
         --primary: 20, 89%, 50%;
         --primary-foreground: 60 9.1% 97.8%;
-        --secondary: 60 4.8% 95.9%;
-        --secondary-foreground: 24 9.8% 10%;
+        --secondary: 0, 0%, 100%, 1;
+        --secondary-foreground: 20, 14.3%, 4.1%;
         --muted: 60 4.8% 95.9%;
         --muted-foreground: 25 5.3% 44.7%;
         --accent: 60 4.8% 95.9%;
@@ -47,4 +47,52 @@
         --input: 20 14.3% 4.1%;
         --ring: 20.5 90.2% 48.2%;
     }
+}
+
+@font-face {
+    font-family: 'Poppins-Bold';
+    font-style: normal;
+    font-weight: 700;
+    src: url('/fonts/Poppins/Poppins-Bold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Poppins-Light';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/fonts/Poppins/Poppins-Light.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Poppins-Black';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/fonts/Poppins/Poppins-Black.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Co Headline Regular';
+    font-style: normal;
+    font-weight: normal;
+    src:
+        local('Co Headline Regular'),
+        url('/fonts/Co Headline/Co Headline.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Co Headline Light';
+    font-style: normal;
+    font-weight: normal;
+    src:
+        local('Co Headline Light'),
+        url('/fonts/Co Headline/Co Headline Light.woff') format('woff');
+}
+
+@font-face {
+    font-family: 'Co Headline Bold';
+    font-style: normal;
+    font-weight: normal;
+    src:
+        local('Co Headline Bold'),
+        url('/fonts/Co Headline/Co Headline Bold.woff') format('woff');
 }
