--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -4,15 +4,15 @@
 
 @layer base {
     :root {
-        --background: 40, 100%, 97%, 1;
+        --background: 40 100% 97%;
         --foreground: 20 14.3% 4.1%;
         --card: 0 0% 100%;
         --card-foreground: 20 14.3% 4.1%;
         --popover: 0 0% 100%;
         --popover-foreground: 20 14.3% 4.1%;
-        --primary: 20, 89%, 50%;
+        --primary: 20 89% 50%;
         --primary-foreground: 60 9.1% 97.8%;
-        --secondary: 0, 0%, 100%, 1;
+        --secondary: 0 0% 100%;
         --secondary-foreground: 20, 14.3%, 4.1%;
         --muted: 60 4.8% 95.9%;
         --muted-foreground: 25 5.3% 44.7%;
