--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -20,10 +20,20 @@
         --accent-foreground: 24 9.8% 10%;
         --destructive: 0 84.2% 60.2%;
         --destructive-foreground: 60 9.1% 97.8%;
+        --primary-active: 20, 89%, 50%, 1;
+        --primary-complete: 140, 64%, 45%, 1;
+        --primary-disabled: 0, 0%, 0%, 0.3;
+        --primary-active-foreground: 20, 88%, 90%, 1;
+        --primary-complete-foreground: 140, 54%, 89%, 1;
+        --primary-disabled-foreground: 0, 0%, 91%, 1;
+        --complete-border: 140, 63%, 36%, 0.1;
+        --active-border: 20, 87%, 40%, 0.2;
+        --disabled-border: 0, 0%, 0%, 0.1;
         --border: 20 5.9% 90%;
         --input: 20 5.9% 90%;
         --ring: 24.6 95% 53.1%;
         --radius: 0.5rem;
+        --base-padding: 1.75rem;
     }
 
     .dark {
@@ -46,6 +56,7 @@
         --border: 12 6.5% 15.1%;
         --input: 12 6.5% 15.1%;
         --ring: 20.5 90.2% 48.2%;
+        --base-padding: 1.75rem;
     }
 }
 
