--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -183,3 +183,22 @@
 .default-transition {
     @apply transition-colors duration-300 ease-in-out;
 }
+
+.react-colorful {
+    width: 100% !important;
+}
+
+[data-reference-hidden] {
+    opacity: 0;
+    pointer-events: none;
+}
+
+input[type='range'] {
+    @apply h-2.5 appearance-none rounded border-0 bg-neutral-200 transition-all active:bg-neutral-300;
+    @apply dark:bg-neutral-700 dark:active:bg-neutral-600;
+
+    &::-webkit-slider-thumb {
+        @apply h-5 w-3 appearance-none rounded-full bg-neutral-800 transition-all active:h-6 active:w-4 active:bg-neutral-900;
+        @apply dark:bg-neutral-100 dark:active:bg-white;
+    }
+}
