--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -11,3 +11,13 @@
 .clip-path-button {
     clip-path: polygon(0 0, 100% 0, 100% 70%, 88.5% 100%, 0 100%);
 }
+
+input[type='range']::-webkit-slider-thumb {
+    width: 15px;
+    -webkit-appearance: none;
+    appearance: none;
+    height: 15px;
+    cursor: ew-resize;
+    background: #f15b10;
+    border-radius: 50%;
+}
