Empty paragraph card

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -51,8 +51,8 @@
         --primary-foreground: 60 9.1% 97.8%;
         --secondary: 0 0% 100%;
         --secondary-foreground: 20, 14.3%, 4.1%;
-        --muted: 41 100% 92%; /* quarter-pearl-lusta-100 */
-        --muted-foreground: 22 79% 34%; /* quarter-pearl-lusta-800 */
+        --muted: 60 4.8% 95.9%;
+        --muted-foreground: 25 5.3% 44.7%;
         --accent: 34 100% 92%;
         --accent-foreground: 24 9.8% 10%;
         --destructive: 0 84.2% 60.2%;
