--- a/app/components/richtext-editor/styles/partials/typography.css
+++ b/app/components/richtext-editor/styles/partials/typography.css
@@ -1,10 +1,10 @@
 .ProseMirror {
     p {
-        @apply my-[1px] leading-relaxed first:mt-0 last:mb-0;
+        @apply my-5 leading-relaxed first:mt-0 last:mb-0;
     }
 
     & > p {
-        @apply my-[1px] first:mt-0 last:mb-0;
+        @apply my-5 first:mt-0 last:mb-0;
     }
 
     h1 {
